<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_action_account_balance_wallet"
            android:title="@string/nav_balance" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_account_circle"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_action_assessment"
            android:title="@string/nav_summary" />

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/nav_about_us" />

            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_action_attach_money"
                android:title="@string/nav_donate" />
        </menu>
    </item>
</menu>