<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/edit_value_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_action_attach_money" />

                <TextView
                    android:id="@+id/value_transaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="8dp"
                    android:text="@string/hint_value_default"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_input_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_date_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_action_today" />

                <TextView
                    android:id="@+id/date_transaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="8dp"
                    android:text="@string/hint_date_default"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_input_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_category_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_action_view_module" />

                <TextView
                    android:id="@+id/category_transaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="8dp"
                    android:text="@string/hint_category_default"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_input_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_desc_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="top"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.1"
                    android:src="@drawable/ic_action_note" />

                <EditText
                    android:id="@+id/desc_transaction"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="0.7"
                    android:gravity="top"
                    android:hint="@string/hint_desc_default"
                    android:inputType="textMultiLine"
                    android:textSize="@dimen/text_input_size" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/submit_transaction"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?colorAccent"
            android:text="@string/btn_send_transaction"
            android:textColor="@color/white" />
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>

